--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/sitemap": "^3.1.0",
     "@astrojs/tailwind": "^5.1.0",
     "astro": "^4.4.1",
+    "astro-icon": "^1.1.0",
     "tailwindcss": "^3.4.1"
   }
 }
