--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@astrojs/sitemap": "^3.1.0",
     "@astrojs/tailwind": "^5.1.0",
     "@fontsource-variable/inter": "^5.0.16",
+    "@fontsource/zen-kaku-gothic-new": "^5.0.18",
     "astro": "^4.4.1",
     "astro-icon": "^1.1.0",
     "tailwindcss": "^3.4.1",
